--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,3 +112,68 @@ jobs:
       - name: Build frontend assets
         run: npm run build
 
+  deploy:
+    name: Deploy to Server
+    runs-on: ubuntu-latest
+    needs: [tests, code-style, frontend]
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+    environment: production
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
+          chmod 600 ~/.ssh/deploy_key
+          ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install npm dependencies
+        run: npm install
+
+      - name: Build frontend assets
+        run: npm run build
+
+      - name: Deploy files to server
+        run: |
+          rsync -avz --delete \
+            --exclude='.git' \
+            --exclude='.github' \
+            --exclude='node_modules' \
+            --exclude='.env' \
+            --exclude='storage' \
+            --exclude='vendor' \
+            --exclude='tests' \
+            --exclude='.gitignore' \
+            --exclude='.editorconfig' \
+            --exclude='.env.example' \
+            --exclude='phpunit.xml' \
+            -e "ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no" \
+            ./ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEPLOY_PATH }}/
+
+      - name: Run deployment commands on server
+        run: |
+          ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no \
+            ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} \
+            "cd ${{ secrets.DEPLOY_PATH }} && \
+            composer install --no-dev --optimize-autoloader --no-interaction && \
+            php artisan migrate --force && \
+            php artisan config:clear && \
+            php artisan config:cache && \
+            php artisan route:clear && \
+            php artisan route:cache && \
+            php artisan view:clear && \
+            php artisan view:cache && \
+            php artisan cache:clear && \
+            php artisan optimize && \
+            chmod -R 755 storage bootstrap/cache && \
+            (chown -R www-data:www-data storage bootstrap/cache || true) && \
+            (sudo systemctl reload php8.4-fpm || sudo systemctl reload php-fpm || true)"
+
